--- a/_data/cv/education.yml
+++ b/_data/cv/education.yml
@@ -1,5 +1,2 @@
-- title: 'B.Sc. (Hons) Physics & Applied Mathematics'
-  description: 'The University of Waterloo (1976-1980)'
-
-- title: 'Ph.D. Theoretical High Energy Physics'
-  description: 'The University of Texas at Austin (1980-1985)'
+- title: 'B.S. (CiTE)Convergence IT Engineering'
+  description: 'Postech, Pohang University of Science and Technology (2017-2021)'
