--- a/_data/cv/academic-experience.yml
+++ b/_data/cv/academic-experience.yml
@@ -1,5 +1,5 @@
-- title: 'Professor of Physics'
-  description: 'McMaster University (2005 – present)'
+- title: 'AI Researcher & Project Manager'
+  description: 'DreamBit(드림비트) (2020 – 2021)'
 
-- title: 'Associate Faculty'
-  description: 'McGill University (1987 – 2005)'
+- title: 'AI Research Engineer'
+  description: 'VitaSoft(비타소프트) (2021 – present)'
