--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,4 +8,4 @@ social:
 - {icon: 'linkedin', link: 'https://www.linkedin.com/in/hyeongmin-moon-09aaa3164/'}
 
 contacts:
-- {name: 'Hyeongmin Moon', title: 'AI Engineer', department: 'Computer Vision', institution: 'Vitasoft', institution_address: 'Guro, Seoul', phone: '(+82) 10-9407-3526', email: 'mohomin123@gmail.com'}
+- {name: 'Hyeongmin Moon', title: 'AI Engineer', department: 'Computer Vision', institution: 'Ados', institution_address: 'Songpa, Seoul', phone: '(+82) 10-9407-3526', email: 'mohomin123@gmail.com'}
